workshop04/config-setup.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: s3ns
