workshop04/minio-setup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: s3ns
spec:
  replicas: 4
  serviceName: minio-hsvc
  selector:
    matchLabels:
      app: minio
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: do-block-storage 
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      labels:
        app: minio
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: minio
        image: bitnami/minio:latest
        ports:
        - containerPort: 9000
        - containerPort: 9090
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "400m"
        volumeMounts:
        - name: data-vol
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 60

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: s3ns
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
  - name: data 
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: s3ns
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
  - name: data 
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
